--- a/P10-Full-Stack-App-React-and-REST-API/client/package.json
+++ b/P10-Full-Stack-App-React-and-REST-API/client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.25.0",
+    "web-vitals": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
